--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -12,6 +12,9 @@ body {
   box-sizing: border-box;
   background-color: #060801;
   color: #fff;
+  /* background-attachment: fixed; */
+  /* background-image: url('/stars.png'); */
+  /* background-repeat: no-repeat; */
 }
 
 a {
